--- a/grails-app/assets/stylesheets/maintenance.css
+++ b/grails-app/assets/stylesheets/maintenance.css
@@ -1,3 +1,11 @@
+/*
+*= require core
+*= require themes/agorapulse/agorapulse
+*= require themes/agorapulse/agorapulse-responsive
+*= encoding UTF-8
+*/
+
+
 /* TODO to put in Agorapulse theme bootswatch.less ??? (when migrating to Bootstrap V3) */
 body {
     padding-top: 42px; /* 60px to make the container go all the way to the bottom of the topbar */
